--- a/Marlin/Windows/MainWindow.xaml
+++ b/Marlin/Windows/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Marlin"
         mc:Ignorable="d"
+        Closing="Window_Closing"
         Title="Marlin" 
         WindowStartupLocation="CenterScreen"
         Height="450" 
