Изменен дизайн окна уведомлений и исправлена логика изменения пароля

--- a/Marlin/Views/Window/MessagePage.xaml
+++ b/Marlin/Views/Window/MessagePage.xaml
@@ -53,7 +53,7 @@
                              BorderThickness="0"
                              FontWeight="Bold"
                              BorderBrush="Transparent"
-                             Foreground="{Binding Path=BackgroundColor,UpdateSourceTrigger=PropertyChanged}"
+                             Foreground="{Binding Path=FontColor,UpdateSourceTrigger=PropertyChanged}"
                              Background="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
                              Visibility="{Binding Path=IsOk,UpdateSourceTrigger=PropertyChanged}"
                              Height="auto"
@@ -70,7 +70,7 @@
                         <Button  Grid.Column="0"
                                  BorderThickness="0"
                                  BorderBrush="Transparent"
-                                 Foreground="{Binding Path=BackgroundColor,UpdateSourceTrigger=PropertyChanged}"
+                                 Foreground="{Binding Path=FontColor,UpdateSourceTrigger=PropertyChanged}"
                                  Background="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
                                  HorizontalAlignment="Right"
                                  FontWeight="Bold"
@@ -86,7 +86,7 @@
                                  BorderThickness="0"
                                  FontWeight="Bold"
                                  BorderBrush="Transparent"
-                                 Foreground="{Binding Path=BackgroundColor,UpdateSourceTrigger=PropertyChanged}"
+                                 Foreground="{Binding Path=FontColor,UpdateSourceTrigger=PropertyChanged}"
                                  Background="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
                                  HorizontalAlignment="Left"
                                  VerticalAlignment="Center"
@@ -120,7 +120,7 @@
                         <Button  Grid.Column="1"
                                  BorderThickness="0"
                                  BorderBrush="Transparent"
-                                 Foreground="{Binding Path=BackgroundColor,UpdateSourceTrigger=PropertyChanged}"
+                                 Foreground="{Binding Path=FontColor,UpdateSourceTrigger=PropertyChanged}"
                                  Background="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
                                  HorizontalAlignment="Center"
                                  VerticalAlignment="Center"
