--- a/Marlin/Windows/MainWindow.xaml
+++ b/Marlin/Windows/MainWindow.xaml
@@ -8,6 +8,8 @@
         Closing="Window_Closing"
         Title="Marlin" 
         WindowStartupLocation="CenterScreen"
+        MinHeight="450" 
+        MinWidth="800"
         Height="450" 
         Width="800">
 </Window>
