--- a/Marlin/Views/Main/SettingsPage.xaml
+++ b/Marlin/Views/Main/SettingsPage.xaml
@@ -6,7 +6,7 @@
       xmlns:vm="clr-namespace:Marlin.ViewModels.Main"
       xmlns:local="clr-namespace:Marlin.Views.Main"
       mc:Ignorable="d" 
-      d:Height="450" 
+      d:Height="1450" 
       d:Width="800"
       ShowsNavigationUI="False"
       Foreground="{Binding Path=FontColor}"
@@ -80,6 +80,7 @@
 
                                         <Grid Grid.Column="1">
                                             <Grid.RowDefinitions>
+                                                <RowDefinition Height="*"/>
                                                 <RowDefinition Height="*"/>
                                                 <RowDefinition Height="*"/>
                                                 <RowDefinition Height="*"/>
@@ -167,6 +168,28 @@
                                                          MaxLength="9"
                                                          FontSize="15"
                                                          Text="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
+                                                         HorizontalContentAlignment="Center"/>
+                                            </Grid>
+
+                                            <Grid Grid.Row="4"
+                                                  Margin="0,10">
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="auto"/>
+                                                    <ColumnDefinition Width="auto"/>
+                                                </Grid.ColumnDefinitions>
+
+                                                <TextBlock Grid.Column="0"
+                                                           FontSize="15"
+                                                           Margin="0,0,15,0"
+                                                           VerticalAlignment="Center"
+                                                           HorizontalAlignment="Center"
+                                                           Text="Фоновое изображение:"/>
+
+                                                <TextBox Grid.Column="1"
+                                                         FontSize="15"
+                                                         MinWidth="100"
+                                                         Text="{Binding Path=BackgraundImage,UpdateSourceTrigger=PropertyChanged}"
+                                                         VerticalAlignment="Center"
                                                          HorizontalContentAlignment="Center"/>
                                             </Grid>
                                         </Grid>
