--- a/Marlin/Views/Main/SettingsPage.xaml
+++ b/Marlin/Views/Main/SettingsPage.xaml
@@ -6,7 +6,7 @@
       xmlns:vm="clr-namespace:Marlin.ViewModels.Main"
       xmlns:local="clr-namespace:Marlin.Views.Main"
       mc:Ignorable="d" 
-      d:Height="1450" 
+      d:Height="450" 
       d:Width="800"
       ShowsNavigationUI="False"
       Foreground="{Binding Path=FontColor}"
@@ -200,13 +200,30 @@
                                                             CommandParameter="Фоновое изображение"
                                                             Content="Фоновое изображение"/>
 
-                                                    <TextBox Grid.Column="1" 
-                                                             FontSize="15"
+                                                    <Grid Grid.Column="1">
+                                                        <Grid.ColumnDefinitions>
+                                                            <ColumnDefinition Width="auto"/>
+                                                            <ColumnDefinition Width="auto"/>
+                                                        </Grid.ColumnDefinitions>
+
+                                                        <TextBox Grid.Column="0" 
+                                                                 FontSize="15"
+                                                                 Margin="0,0,15,0"
                                                              IsReadOnly="True"
                                                              MinWidth="100"
                                                              Text="{Binding Path=BackgraundImage,UpdateSourceTrigger=PropertyChanged}"
                                                              VerticalAlignment="Center"
                                                              HorizontalContentAlignment="Center"/>
+
+                                                        <Button Grid.Column="1"
+                                                                BorderThickness="0"
+                                                                FontSize="15"
+                                                                BorderBrush="Transparent"
+                                                                Foreground="{Binding Path=ExternalBackgroundColor,UpdateSourceTrigger=PropertyChanged}"
+                                                                Background="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
+                                                                Command="{Binding Path=DeleteImageCommand}"
+                                                                Content="X"/>
+                                                    </Grid>
                                                 </Grid>
 
                                                 <Grid Grid.Row="5"
